# website-backend

./: .env  .gitignore  Cargo.toml  Rocket.toml
migrations/2020-08-07-180242_mysql_init/: down.sql  up.sql
src/: main.rs
src/db/: mod.rs  schema.rs
src/db/models/: user.rs
src/utils/: mod.rs
