[package]
name = "website-backend"
version = "0.1.0"
authors = ["Axioms"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', rev = '1010f6a2a88fac899dec0cd2f642156908038a53' }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', rev = '1010f6a2a88fac899dec0cd2f642156908038a53' }

# JWT library
jsonwebtoken = "7.2.0"

# uuid
uuid = { version = "0.8.1", features = ["serde", "v4"] }

# Crypto
ring = "0.16.15"

#json
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"

# data base
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

# qr code
qrcode = "0.11"
oath = "0.10.2"

# date time
chrono = "0.4"

# File changer detection
notify = "4.0.15"